[project]
name = "lucy-edit-comfyui"
description = "Lucy Edit is a video editing model that performs instruction-guided edits on videos using free-text prompts — it supports a variety of edits, such as clothing & accessory changes, character changes, object insertions, and scene replacements while preserving the motion and composition perfectly."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["opencv-python", "numpy", "requests"]

[project.urls]
Repository = "https://github.com/DecartAI/Lucy-Edit-ComfyUI"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DecartAI/Lucy-Edit-ComfyUI/wiki"
"Bug Tracker" = "https://github.com/DecartAI/Lucy-Edit-ComfyUI/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Lucy-Edit-ComfyUI"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

